fix colour contrast

--- a/src/sass/_player.scss
+++ b/src/sass/_player.scss
@@ -51,7 +51,7 @@
     overflow: hidden;
     margin: 0;
     background: transparent;
-    line-height: 1.3;
+    line-height: 1.35;
   }
   .row .btn {
     font-size: 24px;
